solved minor alignment bug

--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@ footer > img
 	display:flex;
 	justify-content:center;
 	grid-column:2/6;
-	height:400px;
+	height: 25rem;
 	flex-direction:column;
 }
 #resellersWriting>h1{
